--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "version": "1.0.0-beta.6",
   "author": "Sebastien Fichot <fichot.sebastien@gmail.com>",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-image": "next",
-    "gatsby-paginate": "^1.0.16",
-    "gatsby-plugin-glamor": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-typography": "next",
-    "gatsby-source-wordpress": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby": "2.0.0-beta.42",
+    "gatsby-image": "2.0.0-beta.6",
+    "gatsby-paginate": "1.0.16",
+    "gatsby-plugin-glamor": "2.0.0-beta.2",
+    "gatsby-plugin-google-analytics": "2.0.0-beta.5",
+    "gatsby-plugin-react-helmet": "3.0.0-beta.3",
+    "gatsby-plugin-sharp": "2.0.0-beta.5",
+    "gatsby-plugin-typography": "2.2.0-beta.2",
+    "gatsby-source-wordpress": "3.0.0-beta.7",
+    "gatsby-transformer-sharp": "2.1.1-beta.4",
     "glamor": "^2.20.40",
     "lodash": "^4.16.4",
     "react": "^16.3.2",
